--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,9 @@
 		<a class="navbar-brand m-2" href="/login">login</a>
 		<% } else if (page === "login") { %>
 		<a class="navbar-brand m-2" href="/register">Register</a>
+		<% } else { %>
+		<a class="navbar-brand m-2" href="/login">login</a>
+		<a class="navbar-brand m-2" href="/register">Register</a>
 		<% } %>
 	</nav>
 </div>
