--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,13 +5,14 @@
 		<%- include('partials/header', {page: 'login'}) %>
 		<div class="container mt-5">
 			<form class="row g-3" action="/login" method="POST">
+				<h2>Login here</h2>
 				<div class="form-floating mb-3">
 					<input
 						type="text"
 						class="form-control"
 						id="name"
-						name="name"
-						placeholder="John Smith"
+						name="username"
+						placeholder="username"
 						required
 					/>
 					<label for="name">name</label>
