--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,1 +1,4 @@
-<h2><%= data.username %></h2>
+<a href="/logout"> sign out</a>
+<h2>Hello <%= user.name %></h2>
+<h2>Email <%= user.email %></h2>
+<img src="<%= user.picture %>" alt="" />
