--- a/views/register.ejs
+++ b/views/register.ejs
@@ -50,7 +50,17 @@
 					<label for="" class="form__label">Confirm Password</label>
 					<small>Error message</small>
 				</div>
-				<button type="submit">Submit</button>
+				<button type="submit">Register</button>
+
+				<div
+					class="g-signin2"
+					data-onsuccess="onSignIn"
+					data-theme="dark"
+					data-width="295"
+					data-height="50"
+					data-longtitle="true"
+					id="google"
+				></div>
 			</form>
 		</div>
 
