--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,6 +7,12 @@
 		integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 		crossorigin="anonymous"
 	/>
+	<meta name="google-signin-scope" content="profile email" />
+	<meta
+		name="google-signin-client_id"
+		content="531022394713-hkdkljvtldvahvep2jg8th8hib21lgvs.apps.googleusercontent.com"
+	/>
+	<script src="https://apis.google.com/js/platform.js" async defer></script>
 	<link rel="stylesheet" href="css/style.css" />
 	<title>Express login system</title>
 </head>
